# RandKey-QT

./: CMakeLists.txt  README.md  RandKey_QT_en_GB.ts  RandKey_QT_zh_CN.ts  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc  utils.cpp  utils.h
translations/: RandKey_QT_en_GB.qm  RandKey_QT_zh_CN.qm
